# bromine

./: Cargo.toml  LICENSE  README.md  SPECIFICATON.md
.github/workflows/: bench.yml  build.yml  lint.yml  publish.yml
benches/: deserialization_benchmark.rs  serialization_benchmark.rs
event_deserialization/1024/change/: estimates.json
event_deserialization/1024/develop/: estimates.json  raw.csv  sample.json  tukey.json
event_deserialization/1024/main/: estimates.json  raw.csv  sample.json  tukey.json
event_deserialization/1024/new/: benchmark.json  estimates.json  raw.csv  sample.json  tukey.json
event_deserialization/1024/report/: index.html
event_deserialization/1048576/change/: estimates.json
event_deserialization/1048576/develop/: benchmark.json  estimates.json  raw.csv  sample.json  tukey.json
event_deserialization/1048576/main/: estimates.json  raw.csv  sample.json  tukey.json
event_deserialization/1048576/new/: estimates.json  raw.csv  sample.json  tukey.json
event_deserialization/1048576/report/: index.html
event_deserialization/16384/change/: estimates.json
event_deserialization/16384/develop/: benchmark.json  estimates.json  raw.csv  sample.json  tukey.json
event_deserialization/16384/main/: estimates.json  raw.csv  sample.json  tukey.json
event_deserialization/16384/new/: estimates.json  raw.csv  sample.json  tukey.json
event_deserialization/16384/report/: index.html
event_deserialization/16777216/change/: estimates.json
event_deserialization/16777216/develop/: benchmark.json  estimates.json  raw.csv  sample.json  tukey.json
event_deserialization/16777216/main/: estimates.json  raw.csv  sample.json  tukey.json
event_deserialization/16777216/new/: estimates.json  raw.csv  sample.json  tukey.json
event_deserialization/16777216/report/: index.html
event_deserialization/262144/change/: estimates.json
event_deserialization/262144/develop/: benchmark.json  estimates.json  raw.csv  sample.json  tukey.json
event_deserialization/262144/main/: estimates.json  raw.csv  sample.json  tukey.json
event_deserialization/262144/new/: estimates.json  raw.csv  sample.json  tukey.json
event_deserialization/262144/report/: index.html
event_deserialization/4096/change/: estimates.json
event_deserialization/4096/develop/: benchmark.json  estimates.json  raw.csv  sample.json  tukey.json
event_deserialization/4096/main/: estimates.json  raw.csv  sample.json  tukey.json
event_deserialization/4096/new/: estimates.json  raw.csv  sample.json  tukey.json
event_deserialization/4096/report/: index.html
event_deserialization/4194304/change/: estimates.json
event_deserialization/4194304/develop/: estimates.json  raw.csv  sample.json  tukey.json
event_deserialization/4194304/main/: estimates.json  raw.csv  sample.json  tukey.json
event_deserialization/4194304/new/: benchmark.json  estimates.json  raw.csv  sample.json  tukey.json
event_deserialization/4194304/report/: index.html
event_deserialization/65536/change/: estimates.json
event_deserialization/65536/develop/: estimates.json  raw.csv  sample.json  tukey.json
event_deserialization/65536/main/: benchmark.json  estimates.json  raw.csv  sample.json  tukey.json
event_deserialization/65536/new/: estimates.json  raw.csv  sample.json  tukey.json
event_deserialization/65536/report/: index.html
event_deserialization/report/: index.html
event_serialization/1024/change/: estimates.json
event_serialization/1024/develop/: estimates.json  raw.csv  sample.json  tukey.json
event_serialization/1024/main/: estimates.json  raw.csv  sample.json  tukey.json
event_serialization/1024/new/: benchmark.json  estimates.json  raw.csv  sample.json  tukey.json
event_serialization/1024/report/: index.html
event_serialization/1048576/change/: estimates.json
event_serialization/1048576/develop/: estimates.json  raw.csv  sample.json  tukey.json
event_serialization/1048576/main/: estimates.json  raw.csv  sample.json  tukey.json
event_serialization/1048576/new/: benchmark.json  estimates.json  raw.csv  sample.json  tukey.json
event_serialization/1048576/report/: index.html
event_serialization/16384/change/: estimates.json
event_serialization/16384/develop/: benchmark.json  estimates.json  raw.csv  sample.json  tukey.json
event_serialization/16384/main/: estimates.json  raw.csv  sample.json  tukey.json
event_serialization/16384/new/: estimates.json  raw.csv  sample.json  tukey.json
event_serialization/16384/report/: index.html
event_serialization/16777216/change/: estimates.json
event_serialization/16777216/develop/: benchmark.json  estimates.json  raw.csv  sample.json  tukey.json
event_serialization/16777216/main/: estimates.json  raw.csv  sample.json  tukey.json
event_serialization/16777216/new/: estimates.json  raw.csv  sample.json  tukey.json
event_serialization/16777216/report/: index.html
event_serialization/262144/change/: estimates.json
event_serialization/262144/develop/: benchmark.json  estimates.json  raw.csv  sample.json  tukey.json
event_serialization/262144/main/: estimates.json  raw.csv  sample.json  tukey.json
event_serialization/report/: index.html
report/: index.html
src/: error.rs  lib.rs  macros.rs  utils.rs
src/events/: error_event.rs  event.rs  event_handler.rs  mod.rs  payload.rs
src/ipc/: builder.rs  client.rs  context.rs  mod.rs  server.rs  stream_emitter.rs
src/namespaces/: builder.rs  mod.rs  namespace.rs  provider_trait.rs
src/protocol/: mod.rs  tcp.rs  unix_socket.rs
src/tests/: event_tests.rs  ipc_tests.rs  mod.rs  utils.rs
tests/: call_counter.rs  protocol.rs  test_encryption.rs  test_event_streams.rs  test_events_with_payload.rs  test_protocol.rs  test_raw_events.rs  test_serialization.rs  utils.rs
tests/utils/: call_counter.rs  mod.rs  protocol.rs
(+64 files in other folders)
