[package]
name = "bromine"
version = "0.18.3"
authors = ["trivernis <trivernis@protonmail.com>"]
edition = "2018"
readme = "README.md"
license = "Apache-2.0"
repository = "https://github.com/Trivernis/bromine/"
description = "A flexible ipc protocol (previously rmp-ipc)"

[lib]
bench=false

[[bench]]
name = "serialization_benchmark"
harness = false

[[bench]]
name = "deserialization_benchmark"
harness = false

[dependencies]
thiserror = "1.0.30"
tracing = "0.1.32"
lazy_static = "1.4.0"
byteorder = "1.4.3"
async-trait = "0.1.52"
num_enum = "0.5.7"
futures-core = "0.3.21"
rmp-serde = { version = "1.0.0", optional = true }
bincode = { version = "1.3.3", optional = true }
serde_json = { version = "1.0.79", optional = true }

[dependencies.typemap_rev]
version = "0.1.5"
git = "https://github.com/Trivernis/typemap_rev"
rev = "750c67bffe8024d2a47725daa473f068ad653fc4"

[dependencies.serde]
optional = true
version = "1.0.136"
features = []

[dependencies.tokio]
version = "1.17.0"
features = ["net", "io-std", "io-util", "sync", "time", "macros"]

[dependencies.postcard]
version = "0.7.3"
optional = true
features = ["alloc"]

[dev-dependencies]
rmp-serde = "1.0.0"
crossbeam-utils = "0.8.7"
futures = "0.3.21"

[dev-dependencies.serde]
version = "1.0.136"
features = ["serde_derive"]

[dev-dependencies.criterion]
version = "0.3.5"
features = ["async_tokio", "html_reports"]

[dev-dependencies.tokio]
version = "1.17.0"
features = ["macros", "rt-multi-thread"]

[features]
default = []
serialize = ["serde"]
serialize_rmp = ["serialize", "rmp-serde"]
serialize_bincode = ["serialize", "bincode"]
serialize_postcard = ["serialize", "postcard"]
serialize_json = ["serialize", "serde_json"]
