[package]
name = "bromine"
version = "0.22.0"
authors = ["trivernis <trivernis@protonmail.com>"]
edition = "2018"
readme = "README.md"
license = "Apache-2.0"
repository = "https://github.com/Trivernis/bromine/"
description = "A flexible ipc protocol (previously rmp-ipc)"

[lib]
bench=false

[[bench]]
name = "serialization_benchmark"
harness = false

[[bench]]
name = "deserialization_benchmark"
harness = false

[dependencies]
thiserror = "1.0.56"
tracing = "0.1.40"
lazy_static = "1.4.0"
byteorder = "1.5.0"
async-trait = "0.1.77"
num_enum = "0.7.2"
futures-core = "0.3.30"
trait-bound-typemap = "0.3.3"
bytes = "1.5.0"
dashmap = "5.5.3"
rmp-serde = { version = "1.1.2", optional = true }
bincode = { version = "1.3.3", optional = true }
serde_json = { version = "1.0.113", optional = true }
chacha20poly1305 = { version = "0.10.1", optional = true }
x25519-dalek = { version = "2.0.0", optional = true }
rand = { version = "0.8.5", optional = true }
rand_core = { version = "0.6.4", optional = true }
sha2 = { version = "0.10.8", optional = true }

[dependencies.serde]
optional = true
version = "1.0.196"
features = []

[dependencies.tokio]
version = "1.35.1"
features = ["net", "io-std", "io-util", "sync", "time", "macros", "rt"]

[dependencies.postcard]
version = "1.0.8"
optional = true
features = ["alloc"]

[dev-dependencies]
rmp-serde = "1.1.2"
crossbeam-utils = "0.8.19"
futures = "0.3.30"
tracing-subscriber = "0.3.18"
port_check = "0.1.5"

[dev-dependencies.serde]
version = "1.0.196"
features = ["serde_derive"]

[dev-dependencies.criterion]
version = "0.5.1"
features = ["async_tokio", "html_reports"]

[dev-dependencies.tokio]
version = "1.35.1"
features = ["macros", "rt-multi-thread"]

[features]
default = []
encryption_layer = ["chacha20poly1305", "sha2", "rand", "x25519-dalek", "rand_core"]
serialize = ["serde"]
serialize_rmp = ["serialize", "rmp-serde"]
serialize_bincode = ["serialize", "bincode"]
serialize_postcard = ["serialize", "postcard"]
serialize_json = ["serialize", "serde_json"]
